Package triangulation: provides triangulations Delaunay triangulations, 
constrained and regular triangulations with  tests and examples.

Ver 7.10()
- added #include  <CGAL/squared_distance_2.h> in 
  Constrained_triangulation_plus_2

Ver 7.09 (19/03/02)
- added delete and copy of constraint_hierarchy
- added #include <cassert> in demo and example of constrained triangulation
- fixed assertions in Constraint_hierarchy_2.h
- added type reference in Trianguation_2 for Microsoft
- fixed a bug in Constrained_triamgulation_plus_2.h still related
  to approximate  intersection computation

Ver 7.08 (18/03/02)
- fixed a bug in Constrained_triamgulation_plus_2.h related to approximate
 intersection computation
- fixed namespace for sscanf and ... in demo/Triangulation_2/parse.C

Ver 7.07 (9/03/02)
- changed Infinite_tester from private to protected for KCC
- suppressed some typedef in test functions for KCC

Ver 7.06 (8/03/02)
- replaced Dummy_output_iterator by Emptyset_iterator
- commented references to sweep construction of constrained triangulation

Ver 7.05 (8/03/02)
- fixed unused parameter in Triangulation_ds_iterator_2.h

Ver 7.04(7/03/02)
- fixed details in Triangulation_ds_face_2.h
- changed number types used in testsuite (get rid of LEDA and Gmp)
- add test for handle conversion operator of circulators and iterators 
  and operator-> for edge circulators and iterators

Ver 7.03 (4/03/02)
- fixed details

Ver 7.02 (1/03/02)
- fixed a detail in vrml_output

Ver 7.01 (1/03/02)
- fixed missing std::

Ver 7.00 (1/03/02)
- adapted 2d triangulations to the DS_Container
- Iterators for finite elements implemented via a filtered iterator

Ver 6.12 (25/02/02)
- in Triangulation_data_structure_2.h chane the variible "emit" to "emapit"
  to fix a clash with Qt

Ver 6.11 (19/02/02)
- added missing file in the doc

Ver 6.10 (11/02/02)
- changed NULL default Face_handle argument to Face_handle(NULL)
  in Triangulation_data_structure_2.h for vcc